--- a/styles.scss
+++ b/styles.scss
@@ -29,14 +29,23 @@ body {
     font-weight: 200;
 
     &__display {
-        font-size: 3rem;
         padding: 30px;
         background-color: $display-color;
-        color: white;
 
         display: flex;
+        flex-direction: column;
         align-items: flex-end;
         justify-content: flex-end;
+
+        .display__text {
+            font-size: 3rem;
+            color: white;
+
+            &--subtext {
+                font-size: 2rem;
+                color: rgba(white, 0.6);
+            }
+        }
     }
 
     &__keys {
