--- a/styles.css
+++ b/styles.css
@@ -88,6 +88,8 @@ body {
 .calc {
   height: 800px;
   width: 400px;
+  max-height: 800px;
+  max-width: 400px;
   border-radius: 30px;
   overflow: hidden;
   display: grid;
@@ -99,6 +101,7 @@ body {
 .calc__display {
   padding: 30px;
   background-color: #1e1e32;
+  overflow: hidden;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
